# fare-estimation

./: .gitignore  README.md  clean_records.py  fares.py  main.py  pyproject.toml  rates.py  utils.py
domain/: models.py
tests/: test_calculate_fares.py  test_calculate_rates.py  test_clean_data.py
