[tool.poetry]
name = "fare-estimation"
version = "0.1.0"
description = ""
authors = ["William <macwilliamdlc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
haversine = "^2.5.1"
pytz = "^2022.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
